--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -4,8 +4,8 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: 0;
-    position: absolute;
+    // bottom: 0;
+    // position: absolute;
     width: 100%;
     img{
         width: 122px;
