Added a max width (1440) to main and header, and also an auto wide margin.

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,7 +1,8 @@
 
 
 header{
-    margin: 30px 50px;
+    margin: 30px auto;
+    max-width: 1440px;
     nav{
         display: flex;
         justify-content: space-between;
