--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@ body{
     margin : 0px;
     font-family: Montserrat;
     main{
-        margin : 30px 50px;
+        margin : auto;
+        max-width: 1440px;
     }
 }
