Used props to make banner  a reusable component, and it is used to display the about page banner. Added media query for header and main margin.

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,8 +1,7 @@
 
 
 header{
-    margin: 30px auto;
-    max-width: 1440px;
+    margin: 30px 50px;
     nav{
         display: flex;
         justify-content: space-between;
@@ -22,5 +21,10 @@ header{
                 }
             }
         }
+    }
+
+    @media (min-width: 1440px) {
+        margin: 30px auto;
+        max-width: 1440px;
     }
 }
