--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,13 @@ body{
     margin : 0px;
     font-family: Montserrat;
     main{
-        margin : auto;
-        max-width: 1440px;
+        margin : 30px 50px;
+    }
+
+    @media (min-width: 1440px) {
+        main {
+            margin : auto;
+            max-width: 1440px;
+        }
     }
 }
