About page is done, style and components. (still need to improve animations : description animation is functionnal but not a I would like, and arrow animation is not yet implemented.)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ body{
 
     @media (min-width: 1440px) {
         main {
-            margin : auto;
+            margin : 30px auto;
             max-width: 1440px;
         }
     }
