Home page : Housings Gallery is now displayed with Grid. About : Added Service description.

--- a/src/styles/Home/HousingThumbnail.scss
+++ b/src/styles/Home/HousingThumbnail.scss
@@ -1,24 +1,29 @@
 .Housings{
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
-    background-color: #FF6060;
     border-radius: 10px;
     width: 340px;
     height: 340px;
+    margin: auto;
+    cursor: pointer;
     figcaption{
-        padding-left: 10px;
-        width: 10%;
+        background-color: #FF6060;
+        border-radius: 0 0 10px 10px;
+        width: 100%;
+        height: 15%;
         color: white;
         font-size: 18px;
-        position: absolute;
+        align-content: center;
+        p{
+            margin: 5px 0 0 10px;     
+        }
     }
     img{
         width: 100%;
-        height: 100%;
         border-radius: 10px 10px 0 0 ;
         object-fit: cover;
-        height: 270px;
-        align-self: flex-start;
+        height: 85%;
     }
-}
+} 
