--- a/src/styles/Home/HousingsGallery.scss
+++ b/src/styles/Home/HousingsGallery.scss
@@ -1,11 +1,10 @@
 .Housings-Gallery{
-    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-gap: 2rem;
+    justify-content: space-around;
     background-color: #F6F6F6;
     border-radius: 25px;
-    min-width: 100px;
-    min-height: 100px;
+    padding: 50px 0;
     margin: 50px 0px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
 }
