Collapse components animations is now the same on opening and closing and is now handle with useState and useRef. Collapse's arrow is now also animated. Changed Home card's text margin.

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -8,6 +8,11 @@
     .about-collapse-container{
         display: flex;
         flex-direction: column;
+        margin: 2rem 0;
+        gap: 2rem;
         max-width: 1150px;
+        .collapse-container{
+            margin: 0;
+        }
     }
 }
