--- a/src/styles/Home/Card.scss
+++ b/src/styles/Home/Card.scss
@@ -17,7 +17,7 @@
         font-size: 18px;
         align-content: center;
         p{
-            margin: 5px 0 0 10px;     
+            margin: 0 0 0 20px;     
         }
     }
     img{
