--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -14,6 +14,9 @@ header{
                     font-size: 24px;
                     font-weight: 500;
                 }
+                .active-link{
+                    text-decoration: underline;
+                }
             }
         }
     }
