Moved scss files in the same folder that the attached component / updated imports.
Changed 'Collapse' <p> into a <div>

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -34,7 +34,7 @@
             border-radius: 1px;
             margin-top: -4px;
         
-            p {
+            .collapse-text {
                 background-color: #F6F6F6;
                 margin: 0;
                 padding: 14px 15px 10px 15px;
