--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -17,5 +17,6 @@
         color: white;
         font-size: 48px;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        font-weight: 700;
     }
 }
