--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,26 +4,29 @@
     justify-content: flex-start;
     align-items: flex-end;
     border-radius: 10px;
-    width: 340px;
+    width: 100%;
     height: 340px;
     margin: auto;
+    position: relative;
+    justify-content: flex-end;
     cursor: pointer;
     figcaption{
-        background-color: #FF6060;
-        border-radius: 0 0 10px 10px;
         width: 100%;
-        height: 15%;
+        height: 20%;
+        background-color: rgba(255, 96, 96, 0.45);
+        border-radius: 0 0 10px 10px;
         color: white;
         font-size: 18px;
         align-content: center;
+        position: absolute;
         p{
-            margin: 0 0 0 20px;     
+            margin: 0 0 0 20px;
         }
     }
     img{
         width: 100%;
-        border-radius: 10px 10px 0 0 ;
+        height: 100%;
+        border-radius: 10px;
         object-fit: cover;
-        height: 85%;
     }
 } 
