--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -9,11 +9,11 @@
     margin: auto;
     position: relative;
     justify-content: flex-end;
-    cursor: pointer;
+    background-color: black;
     figcaption{
         width: 100%;
         height: 20%;
-        background-color: rgba(255, 96, 96, 0.45);
+        // background-color: rgba(255, 96, 96, 0.1);
         border-radius: 0 0 10px 10px;
         color: white;
         font-size: 18px;
@@ -21,6 +21,7 @@
         position: absolute;
         p{
             margin: 0 0 0 20px;
+            font-weight: 600;
         }
     }
     img{
@@ -28,5 +29,6 @@
         height: 100%;
         border-radius: 10px;
         object-fit: cover;
+        opacity: 0.8;
     }
 } 
