- Housing page : Added housing title and location, host infos, tags and collapses elements (description & equipments). Only rating left to do.
- Collapse component : changed 'description' prop to 'children'

Created a Rating folder (with Rating.jsx and Rating.scss) for future component.

- Slider component : added 'cursor:pointer' to arrow icons.

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -21,7 +21,11 @@
         border: none;
         outline: none;
         box-shadow: none;
-        padding: 20px;
+        padding: 0 20px;
+        height: 100%;
+        img{
+            cursor: pointer;
+        }
     }
     .next-button{
         position: absolute;
