--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -10,6 +10,12 @@
     position: relative;
     justify-content: flex-end;
     background-color: black;
+    &:hover{
+        width: 101%;
+        height: 101%;
+        box-shadow: 0px 0px 35px 10px rgba(255, 96, 96, 0.9);
+        transition: 0.2s;
+        }
     figcaption{
         width: 100%;
         height: 20%;
