--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,7 +1,6 @@
 .banner{
     display: flex;
     align-items: center;
-    text-align: center;
     justify-content: center;
     background-color: black;
     border-radius: 25px;
@@ -18,5 +17,6 @@
         font-size: 48px;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
         font-weight: 700;
+        max-width: 80%;
     }
 }
