Card component, Home page and Error page now support mobile responsive.

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -12,9 +12,9 @@
     background-color: black;
     &:hover{
         width: 101%;
-        height: 101%;
-        box-shadow: 0px 0px 35px 10px rgba(255, 96, 96, 0.9);
-        transition: 0.2s;
+        // height: 101%;
+        box-shadow: 0px 0px 25px 5px rgba(255, 96, 96, 0.9);
+        transition: 0.25s;
         }
     figcaption{
         width: 100%;
