Added statics stars to Rating component to make the style. Added empty and full star image into icon folder. Created an own folder for each page (JSX & SCSS) & updated all imports.

--- a/src/pages/Housing/Housing_mobile.scss
+++ b/src/pages/Housing/Housing_mobile.scss
@@ -2,6 +2,11 @@
 
     .infos-container{
         flex-direction: column;
+        margin: 10px 0;
+        .host-infos{
+            flex-direction: row-reverse;
+            align-items: center;
+        }
     }
 
     .collapses-container{
