--- a/src/pages/Housing/Housing.scss
+++ b/src/pages/Housing/Housing.scss
@@ -2,11 +2,11 @@
 .infos-container{
     display: flex;
     justify-content: space-between;
+    margin: 30px 0;
     .housing-infos{
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        margin: 30px 0;
+        gap: 25px;
         .title-and-location{
             display: flex;
             flex-direction: column;
@@ -47,6 +47,7 @@
 
 .host-infos{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
