Rating & Slider components : Refactoring Slider.scss : image index is now horizontally centered. Housing.scss : added flex-wrap to tags. Collapse.scss: change .arrow-icon padding to margin.

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -16,7 +16,7 @@
             margin: 0;
         }
         .arrow-icon {
-            padding: 10px 15px 10px 15px;
+            margin: 10px 15px 10px 15px;
             cursor: pointer;
             transition: transform 0.25s ease-in-out;   
         }
