--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -22,23 +22,21 @@
         outline: none;
         box-shadow: none;
         padding: 0 20px;
-        height: 100%;
         img{
             cursor: pointer;
         }
     }
     .next-button{
-        position: absolute;
         right: 0;
     }
     .prev-button{
-        position: absolute;
         left: 0;
     }
     p{
         position: absolute;
         bottom: 3%;
         left: 50%;
+        transform: translateX(-50%);
         color: white;
         font-weight: 500;
         font-size: 18px;
