--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixin.scss";
+
 .banner{
     display: flex;
     align-items: center;
@@ -18,5 +20,15 @@
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
         font-weight: 700;
         max-width: 80%;
+    }
+    @include respond-to(mobile){
+            justify-content: flex-start;
+            img{
+                height: 111px;
+            }
+            p{
+                font-size: 24px;
+                margin: 0px 20px;
+            }
     }
 }
