--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixin.scss";
+
 .Cards{
     display: flex;
     flex-direction: column;
@@ -13,11 +15,11 @@
     &:hover{
         width: 101%;
         // height: 101%;
-        box-shadow: 0px 0px 25px 5px rgba(255, 96, 96, 0.9);
+        box-shadow: 0px 0px 25px 5px rgba($kasa-main-color, 0.9);
         transition: 0.25s;
         }
-    figcaption{
-        width: 100%;
+        figcaption{
+            width: 100%;
         height: 20%;
         // background-color: rgba(255, 96, 96, 0.1);
         border-radius: 0 0 10px 10px;
@@ -37,4 +39,17 @@
         object-fit: cover;
         opacity: 0.8;
     }
+    @include respond-to(mobile){
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-end;
+            border-radius: 10px;
+            width: 100%;
+            height: auto;
+            margin: auto;
+            position: relative;
+            justify-content: flex-end;
+            background-color: black; 
+    }    
 } 
