--- a/src/layout/Footer.scss
+++ b/src/layout/Footer.scss
@@ -1,3 +1,5 @@
+@import "../styles/mixin.scss";
+
 footer{
     background-color: black;
     margin: 0px 0px !important;
@@ -14,5 +16,13 @@ footer{
         color: white;
         font-size: 24px;
         margin: 0px;
+    }
+    @include respond-to(mobile) {
+            p{
+                font-size: 1.1rem;
+                display: flex;
+                flex-wrap: wrap;
+                max-width: 30%;
+            }
     }
 }
