--- a/src/pages/Error/Error.scss
+++ b/src/pages/Error/Error.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixin.scss";
+
 .error-container{
     display: flex;
     flex-direction: column;
@@ -6,14 +8,22 @@
     h1{
         margin: 0;
         font-size: 288px;
-        color: #FF6060;
+        color: $kasa-main-color;
     }
     h2{
-        color: #FF6060;
+        color: $kasa-main-color;
         font-size: 36px;
         font-weight: 500;
     }
     .go-back{
         color: black;
+    }
+    @include respond-to(mobile){
+            h1{
+                font-size: 96px;
+            }
+            h2{
+                font-size: 18px;
+            }
     }
 }
