--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixin.scss";
+
 .Cards-Gallery{
     display: grid;
     grid-template-columns: repeat(auto-fill, 350px);
@@ -7,4 +9,15 @@
     border-radius: 25px;
     padding: 50px 0;
     margin: 50px 0px;
+    @include respond-to(mobile) {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        border-radius: 25px;
+        padding: 20px 0;
+        margin: 20px 0px;
+    }
 }
+
+
+    
