--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,17 @@
+@import 'mixin';
+
 body{
     margin : 0px;
     font-family: Montserrat;
     main{
         margin : 30px 50px;
-    }
-
-    @media (min-width: 1440px) {
-        main {
-            margin : 30px auto;
-            max-width: 1440px;
+        @include respond-to(mobile) {
+                margin : 20px !important;
+        }
+        @include respond-to(widescreen){
+                margin : 30px auto;
+                max-width: 1440px;
         }
     }
+
 }
