--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,46 +1,45 @@
 @import "../../styles/mixin.scss";
 
 .collapse-container {
-    margin: 30px 0; 
-    .collapse-title {
-        background-color: $kasa-main-color;
-        border-radius: 5px;
-        color: #FFFFFF;
-        display: flex;
-        justify-content: space-between;
-        z-index: 2;
-        position: relative;
-        h2 {
-            padding: 10px 15px 10px 15px;
-            font-size: 24px;
-            font-weight: 700;
-            margin: 0;
-        }
-        .arrow-icon {
-            margin: 10px 15px 10px 15px;
-            cursor: pointer;
-            transition: transform 0.25s ease-in-out;   
-        }
-        .arrow-icon.rotate {
-            transform: rotate(-180deg);
-            transition: transform 0.25s ease-in-out;
-        }
-        
+  margin: 30px 0;
+  .collapse-title {
+    background-color: $kasa-main-color;
+    border-radius: 5px;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    z-index: 2;
+    position: relative;
+    h2 {
+      padding: 10px 15px 10px 15px;
+      font-size: 24px;
+      font-weight: 700;
+      margin: 0;
     }
-    .collapse-content {
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height 0.25s ease-out;
-        border-radius: 1px;
-        margin-top: -4px;
-        
-        .collapse-text {
-            background-color: #F6F6F6;
-            margin: 0;
-            padding: 14px 15px 10px 15px;
-        }
+    .arrow-icon {
+      margin: 10px 15px 10px 15px;
+      cursor: pointer;
+      transition: transform 0.25s ease-in-out;
     }
-    @include respond-to(mobile){
-            margin: 10px 0;
+    .arrow-icon.rotate {
+      transform: rotate(-180deg);
+      transition: transform 0.25s ease-in-out;
     }
+  }
+  .collapse-content {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.25s ease-out;
+    border-radius: 1px;
+    margin-top: -4px;
+
+    .collapse-text {
+      background-color: #f6f6f6;
+      margin: 0;
+      padding: 14px 15px 10px 15px;
+    }
+  }
+  @include respond-to(mobile) {
+    margin: 10px 0;
+  }
 }
