--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,23 +1,20 @@
 @import "../../styles/mixin.scss";
 
-.Cards-Gallery{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 350px);
-    grid-gap: 2rem;
-    justify-content: space-around;
-    background-color: #F6F6F6;
+.Cards-Gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 350px);
+  grid-gap: 2rem;
+  justify-content: space-around;
+  background-color: #f6f6f6;
+  border-radius: 25px;
+  padding: 50px 0;
+  margin: 50px 0px;
+  @include respond-to(mobile) {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
     border-radius: 25px;
-    padding: 50px 0;
-    margin: 50px 0px;
-    @include respond-to(mobile) {
-        display: flex;
-        flex-direction: column;
-        background-color: white;
-        border-radius: 25px;
-        padding: 20px 0;
-        margin: 20px 0px;
-    }
+    padding: 20px 0;
+    margin: 20px 0px;
+  }
 }
-
-
-    
