--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,8 +1,8 @@
+@import "../../sass/mixin.scss";
+
 .slider {
   display: flex;
   position: relative;
-  width: 100%;
-  height: 415px;
   justify-content: center;
   background-color: black;
   border-radius: 10px;
@@ -40,5 +40,13 @@
     color: white;
     font-weight: 500;
     font-size: 18px;
+  }
+  @include respond-to(mobile) {
+    .slider-img{
+      max-height: 300px;
+    }
+    .index-info{
+      display: none;
+    }
   }
 }
