Card : removed box shadow on hover.

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -48,5 +48,8 @@
     position: relative;
     justify-content: flex-end;
     background-color: black;
+    &:hover {
+      box-shadow: none;
+    }
   }
 }
