Slider : changed prev/next arrow image size for mobile (50%) About : Added an alt to banner img Rating : updated stars name for better understanding

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -48,5 +48,13 @@
     .index-info{
       display: none;
     }
+    .navigation-button{
+      padding: 0 10px;
+      img{
+        width: 50%;
+        height: auto;
+
+      }
+    }
   }
 }
