--- a/src/components/Host/Host.scss
+++ b/src/components/Host/Host.scss
@@ -1,4 +1,5 @@
-@import "../../sass/mixin.scss";
+@import "../../sass/responsive-mixins.scss";
+@import "../../sass/color-variables.scss";
 
 .host-profile {
   display: flex;
@@ -7,7 +8,7 @@
   justify-content: space-between;
   text-align: end;
   gap: 20px;
-  color: $kasa-main-color;
+  color: $main-color;
   &:hover {
     text-decoration: underline;
     cursor: pointer;
