--- a/src/pages/Housing/Housing.scss
+++ b/src/pages/Housing/Housing.scss
@@ -1,4 +1,5 @@
-@import "../../sass/mixin.scss";
+@import "../../sass/responsive-mixins.scss";
+@import "../../sass/color-variables.scss";
 
 .infos-container {
   display: flex;
@@ -15,7 +16,7 @@
       h1 {
         font-size: 36px;
         font-weight: 500;
-        color: $kasa-main-color;
+        color: $main-color;
         margin: 0;
       }
       p {
@@ -30,7 +31,7 @@
       flex-wrap: wrap;
       .tag {
         display: flex;
-        background-color: $kasa-main-color;
+        background-color: $main-color;
         border-radius: 10px;
         text-align: center;
         max-height: 30px;
